# plc

./: Cargo.toml  flake.nix  justfile  readme.md  rust-toolchain.toml  stm32g474re.x
.cargo/: config.toml
data/: Saxion Mockloop Report Joris.md  YUMO-TransFlow-flow-sensorpdf  firmware_architecture.excalidraw  mockloop_architecture.excalidraw  pressure-sensor-3500R0001G01B000
data/Afstudeerverslag-MT-Saxion-Joris-Blommestijn-MCL/: Compliance_code.m  Mock Circulation Loop.vi
src/: adc_task.rs  button_task.rs  comms_task.rs  control_task.rs  dac_task.rs  framing_task.rs  led_task.rs  main.rs  reporting_task.rs  valve_task.rs
src/comms/: connection_state.rs  messages.rs  mod.rs  task.rs  uart.rs
src/control/: error.rs  heart_controller.rs  mod.rs  phase.rs
src/dac/: dac_task.rs  endpoint.rs  mod.rs  setpoint.rs
src/hal/: mod.rs  stm32f103c6.rs  stm32g474re.rs
src/heart_control/: error.rs  heart_controller.rs  mod.rs  phase.rs
src/loop_control/: loop_controller.rs  mod.rs
src/loop_control/setpoint/: compliance.rs  mod.rs  resistance.rs
