[package]
name = "plc-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-hal = "1.0.0"
heapless = { version = "0.8.0", features = ["serde", "defmt-03"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
postcard = { version = "1.1.3", features = ["defmt", "use-defmt"] }
serde = { version = "1.0.219", default-features = false, features = ["serde_derive"] }
uom = { version = "0.37.0", default-features = false, features = ["serde", "si", "u32"] }

# embassy-stm32 provides our HAL
[dependencies.embassy-stm32]
version = "0.3.0"
optional = true
default-features = false
features = ["defmt", "rt"]

[features]
default = [ "stm32g474re" ]
stm32f103c6 = ["embassy-stm32/stm32f103c6", "embassy-stm32/time-driver-any"]
stm32g474re = ["embassy-stm32/stm32g474re", "embassy-stm32/dual-bank", "embassy-stm32/time-driver-tim2"]
